# Vault-RAG-System

./: .copilotignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  prompt.md
api/: __init__.py  main.py  streamlit_app.py
data/: .gitkeep
docs/: .gitkeep
evals/: __init__.py  golden_dataset.json  ragas_suite.py  results.json
ingestion/: __init__.py  config.py  models.py  parser.py  pipeline.py  state_tracker.py  sync_worker.py
notebooks/: .gitkeep
scripts/: generate_test_docs.py
src/: __init__.py  batch.py  config.py  embeddings.py  ingest.py  models.py  parsers.py  state_db.py  vector_store.py
tests/: test_azure_ingestion.py  test_generate_answer.py  test_models.py  test_parser.py  test_parsers.py  test_pipeline.py  test_retriever.py  test_state_db.py  test_state_tracker.py
vector_db/: __init__.py  retriever.py
